<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >
    
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description" >
    </TextView>

    <Button
        android:id="@+id/decryptTitleButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/encryptTitleButton"
        android:text="@string/action_decrypt" />

    <Button
        android:id="@+id/encryptTitleButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/decryptTitleButton"
        android:layout_alignParentLeft="true"
        android:maxHeight="@dimen/abc_panel_menu_list_width"
        android:text="@string/action_encrypt" />
    
</RelativeLayout>
