<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jmu_gold"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/encryptTitleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/jmu_gold"
        android:gravity="center"
        android:text="@string/encrypt_title"
        android:textColor="@color/jmu_purple"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableRow
        android:id="@+id/inputTableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inputDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:text="@string/encrypt_input_decription"
            android:textColor="@color/jmu_purple"
            android:textSize="@dimen/abc_action_bar_title_text_size" />

        <EditText
            android:id="@+id/inputEncryptEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inputFileTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/abc_action_bar_icon_vertical_padding"
            android:text="@string/encrypt_input_file"
            android:textColor="@color/jmu_purple"
            android:textSize="@dimen/abc_action_bar_title_text_size" />

        <Button
            android:id="@+id/fileSelectButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_input_button" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fileEncryptTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/encrypt_input_no_file_selected"
            android:textColor="@color/gray"
            android:textStyle="italic" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/shiftNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:text="@string/encrypt_input_shift"
            android:textColor="@color/jmu_purple"
            android:textSize="@dimen/abc_action_bar_title_text_size" />

        <EditText
            android:id="@+id/shiftNumberEditText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/encryptTextButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_start_button" />

    </TableRow>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/outputSavedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/outputTextButton"
            android:layout_alignBottom="@+id/outputTextButton"
            android:layout_marginLeft="29dp"
            android:layout_toRightOf="@+id/outputTextButton"
            android:gravity="center"
            android:text="@string/encrypt_output_text_saved"
            android:textColor="@color/gray"
            android:textStyle="italic" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fillViewport="true"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/outputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/abc_dropdownitem_text_padding_left" />
            
        </ScrollView>

        <Button
            android:id="@+id/outputTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/scrollView1"
            android:gravity="fill_vertical"
            android:text="@string/encrypt_output_text_file" />

    </RelativeLayout>

</LinearLayout>
